# hdzero-goggle

./: .gitignore  .gitmodules  CMakeLists.txt
ext/: setup.sh
ext/dropbear/: CMakeLists.txt
lib/ffmpeg/: CMakeLists.txt
mkapp/: mkapp_ota.sh
mkapp/app/app/record/: install.sh  record-env.sh
mkapp/app/app/record/confs/: record.conf
mkapp/app/language/: es_es.ini  ru_ru.ini
mkapp/app/script/: rc.sh  wlan_start_www.sh  wlan_stop.sh
mkapp/app/services/: startup.sh
mkapp/app/services/busybox/: busybox
mkapp/app/services/ffmpeg/lib/: libavcodec.so.59  libavcodec.so.59.18.100  libavdevice.so.59  libavdevice.so.59.4.100  libavfilter.so.8  libavfilter.so.8.24.100  libavformat.so.59  libavformat.so.59.16.100  libavutil.so.57  libavutil.so.57.17.100  libpostproc.so.56
mkapp/app/services/libx264/lib/: libx264.so.165
mkapp/app/services/scripts/: busybox_startup.sh
mkapp/app/services/scripts/install/: 20_ffmpeg.sh  30_libx264.sh  50_ffmpeg.sh
mkapp/app/services/www/: index.html
mkapp/app/services/www/cgi-bin/: constants  dvr  live  rstp  status  utils
mkapp/app/services/www/dvr/: hdz.m3u8
mkapp/app/services/www/live/: hdz.m3u8
mkapp/app/services/www/script/: global.js
src/core/: app_state.h  ht.c  input_device.c  main.c  msp_displayport.c  msp_displayport.h  osd.c  settings.c  settings.h
src/driver/: hardware.c
src/hlsProxy/: HLSSegmenterMP4.cpp  HLSSegmenterMP4.hh  main.cpp
src/rtspLive/: main.cpp
src/ui/: page_clock.c  page_common.c  page_common.h  page_fans.c  page_imagesettings.c  page_osd.c  page_record.c  page_wifi.c  ui_main_menu.c  ui_main_menu.h  ui_osd_element_pos.c
